removing pdf from publish script; fixing typo