@@ -12,12 +12,8 @@ xslthlJar=scripts/libs/xslthl/xslthl-2.0.1.jar
 xsl=scripts/libs/docbook-xsl
 xslChunked=xsl/xhtml-chunked.xsl
 xslAllInOne=xsl/xhtml.xsl
-xslFO=xsl/fo.xsl
-fop=scripts/libs/fop
 outputAllInOne=release/html/jquery-fundamentals-book.html
 outputChunked=release/html/index.html
-outputFO=release/fo/jquery-fundamentals-book.fo
-outputPDF=release/pdf/jquery-fundamentals-book.pdf
 
 if [ ! -f $xalan/xalan.jar ]; then
 	echo "Xalan not found. Run install script: ./scripts/install.sh"
@@ -37,18 +33,11 @@ if [ ! -d "release/html" ]; then
 	mkdir release/html
 fi
 
-if [ ! -d "release/fo" ]; then
-	mkdir release/fo
-fi
-
-if [ ! -d "release/pdf" ]; then
-	mkdir release/pdf
-fi
-
 #cp -Rf imgs release/html
 cp style/* release/html
 cp -Rf $xsl/images release/html
 
+#chunked html
 java \
 	-Djava.endorsed.dirs=$xalan  \
     -cp "$xalan/xalan.jar;$xalan/xml-apis.jar;$xalan/xercesImpl.jar;$xsl/extensions/xalan27.jar;$xslthlJar" \
@@ -62,6 +51,7 @@ java \
     -param highlight.xslthl.config "file://$absolute/scripts/libs/xslthl/highlighters/xslthl-config.xml" \
     -param highlight.source 1
 
+#all-in-one html
 java \
 	-Djava.endorsed.dirs=$xalan  \
     -cp "$xalan/xalan.jar;$xalan/xml-apis.jar;$xalan/xercesImpl.jar;$xsl/extensions/xalan27.jar;$xslthlJar" \
@@ -75,25 +65,3 @@ java \
     -param highlight.xslthl.config "file://$absolute/scripts/libs/xslthl/highlighters/xslthl-config.xml" \
     -param highlight.source 1
     
-java \
-	-Djava.endorsed.dirs=$xalan  \
-    -cp "$xalan/xalan.jar;$xalan/xml-apis.jar;$xalan/xercesImpl.jar;$xsl/extensions/xalan27.jar;$xslthlJar" \
-    -Dorg.apache.xerces.xni.parser.XMLParserConfiguration=org.apache.xerces.parsers.XIncludeParserConfiguration \
-	org.apache.xalan.xslt.Process \
-    -in $input  \
-    -out $outputFO  \
-    -xsl $xslFO  \
-    -param use.extensions 1 \
-    -param highlight.xslthl.config "file://$absolute/scripts/libs/xslthl/highlighters/xslthl-config.xml" \
-    -param highlight.source 1
-
-#cp -Rf imgs $fop
-
-cd $fop
-java \
-	-jar "build/fop.jar" \
-	-fo ../../../$outputFO -pdf ../../../$outputPDF
-	
-cd $base
-
-#rm -rf $fop/imgs
